# mafw-upnp-source

./: AUTHORS  Makefile.am  autogen.sh  configure.ac  mafw-upnp-source-uninstalled.pc.in
debian/: changelog  control  copyright  mafw-upnp-source.dirs  mafw-upnp-source.install.in  mafw-upnp-source.postinst  mafw-upnp-source.prerm  rules
tests/: Makefile.am  test-didl.c  test-upnp-source.c  test-util.c  test.suppressions  upnp-source-tt.c
upnp-source/: Makefile.am  mafw-upnp-source-didl.c  mafw-upnp-source-didl.h  mafw-upnp-source-util.c  mafw-upnp-source-util.h  mafw-upnp-source.c  mafw-upnp-source.h
